// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LandingPage > rendrer innlogget side 1`] = `
<DocumentFragment>
  <div
    class="_main_55ef1a _main__white_55ef1a"
  >
    <div
      class="_content_55ef1a _content__isFramed_55ef1a"
    >
      <div
        class="_headerGroup_55ef1a"
      >
        <representasjon-banner
          redirectto="http://localhost:3000/pensjon/kalkulator/start"
          representasjonstyper="PENSJON_FULLSTENDIG,PENSJON_SKRIV,PENSJON_PENGEMOTTAKER,PENSJON_VERGE,PENSJON_VERGE_PENGEMOTTAKER"
        />
        <div
          class="_headerGroupTitle_55ef1a _headerGroupTitle__isFramed_55ef1a"
        >
          <img
            alt=""
            class="_headerGroupTitle__logo_55ef1a"
            data-testid="framework-logo"
            src="/pensjon/kalkulator/src/assets/kalkulator.svg"
          />
          <h1
            class="navds-heading navds-heading--large"
          >
            pageframework.title
          </h1>
        </div>
      </div>
      <div
        class="_landingPage_6ae597"
      >
        <div
          class="navds-stack navds-vstack navds-stack-gap navds-stack-direction"
          style="--__ac-stack-gap-xs: var(--a-spacing-10); --__ac-stack-direction-xs: column;"
        >
          <section>
            <div
              class="navds-stack navds-vstack navds-stack-gap navds-stack-direction"
              style="--__ac-stack-gap-xs: var(--a-spacing-4); --__ac-stack-direction-xs: column;"
            >
              <h2
                class="navds-heading navds-heading--medium"
              >
                landingsside.for.deg.foedt.etter.1963
              </h2>
              <div>
                <p
                  class="navds-body-long navds-body-long--medium"
                >
                  landingsside.velge_mellom_detaljert_og_enkel
                </p>
                <ul
                  class="_list_6ae597"
                >
                  <li>
                    <p
                      class="navds-body-long navds-body-long--medium"
                    >
                      <span
                        class="_ellipse_6ae597 _ellipse__blue_6ae597"
                      />
                      stegvisning.start.list_item1
                    </p>
                  </li>
                  <li>
                    <p
                      class="navds-body-long navds-body-long--medium"
                    >
                      <span
                        class="_ellipse_6ae597 _ellipse__purple_6ae597"
                      />
                      stegvisning.start.list_item2 
                    </p>
                  </li>
                  <li>
                    <p
                      class="navds-body-long navds-body-long--medium"
                    >
                      <span
                        class="_ellipse_6ae597 _ellipse__green_6ae597"
                      />
                      stegvisning.start.list_item3 
                    </p>
                  </li>
                </ul>
              </div>
              <div
                class="navds-stack navds-hstack navds-stack-gap navds-stack-direction navds-stack-wrap"
                style="--__ac-stack-gap-xs: var(--a-spacing-4); --__ac-stack-direction-xs: row;"
              >
                <button
                  class="navds-button navds-button--primary navds-button--medium"
                  data-testid="landingside-enkel-kalkulator-button"
                >
                  <span
                    class="navds-label"
                  >
                    landingsside.button.enkel_kalkulator
                  </span>
                </button>
              </div>
              <a
                class="navds-link _link_6ae597 navds-link--action navds-link--inline-text"
                href="/pensjon/kalkulator/personopplysninger"
                target="_blank"
              >
                landingsside.link.personopplysninger
                <svg
                  aria-labelledby="title-r1"
                  fill="none"
                  focusable="false"
                  height="1.25rem"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1.25rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="title-r1"
                  >
                    application.global.external_link
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M20.532 3.471A.75.75 0 0 1 20.75 4v7.5a.75.75 0 0 1-1.5 0V5.81l-8.72 8.72a.75.75 0 1 1-1.06-1.06l8.72-8.72H12.5a.75.75 0 0 1 0-1.5H20c.206 0 .393.083.529.218l.001.002zM4.75 9A.25.25 0 0 1 5 8.75h7a.75.75 0 0 0 0-1.5H5A1.75 1.75 0 0 0 3.25 9v10c0 .966.784 1.75 1.75 1.75h10A1.75 1.75 0 0 0 16.75 19v-7a.75.75 0 0 0-1.5 0v7a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </a>
              <div>
                <p
                  class="navds-body-long navds-body-long--medium"
                >
                  landingsside.velge_mellom_detaljert_og_enkel_2
                </p>
              </div>
              <div>
                <div
                  class="navds-stack navds-hstack navds-stack-gap navds-stack-direction navds-stack-wrap"
                  style="--__ac-stack-gap-xs: var(--a-spacing-4); --__ac-stack-direction-xs: row;"
                >
                  <button
                    class="navds-button navds-button--secondary navds-button--medium"
                    data-testid="landingside-detaljert-kalkulator-button"
                  >
                    <span
                      class="navds-label"
                    >
                      landingsside.button.detaljert_kalkulator
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LandingPage > rendrer innlogget side 2`] = `
<DocumentFragment>
  <div
    class="_main_55ef1a _main__white_55ef1a"
  >
    <div
      class="_content_55ef1a _content__isFramed_55ef1a"
    >
      <div
        class="_headerGroup_55ef1a"
      >
        <representasjon-banner
          redirectto="http://localhost:3000/pensjon/kalkulator/start"
          representasjonstyper="PENSJON_FULLSTENDIG,PENSJON_SKRIV,PENSJON_PENGEMOTTAKER,PENSJON_VERGE,PENSJON_VERGE_PENGEMOTTAKER"
        />
        <div
          class="_headerGroupTitle_55ef1a _headerGroupTitle__isFramed_55ef1a"
        >
          <img
            alt=""
            class="_headerGroupTitle__logo_55ef1a"
            data-testid="framework-logo"
            src="/pensjon/kalkulator/src/assets/kalkulator.svg"
          />
          <h1
            class="navds-heading navds-heading--large"
          >
            pageframework.title
          </h1>
        </div>
      </div>
      <div
        class="_landingPage_6ae597"
      >
        <div
          class="navds-stack navds-vstack navds-stack-gap navds-stack-direction"
          style="--__ac-stack-gap-xs: var(--a-spacing-10); --__ac-stack-direction-xs: column;"
        >
          <section>
            <div
              class="navds-stack navds-vstack navds-stack-gap navds-stack-direction"
              style="--__ac-stack-gap-xs: var(--a-spacing-4); --__ac-stack-direction-xs: column;"
            >
              <h2
                class="navds-heading navds-heading--medium"
              >
                landingsside.for.deg.foedt.etter.1963
              </h2>
              <div>
                <p
                  class="navds-body-long navds-body-long--medium"
                >
                  landingsside.velge_mellom_detaljert_og_enkel
                </p>
                <ul
                  class="_list_6ae597"
                >
                  <li>
                    <p
                      class="navds-body-long navds-body-long--medium"
                    >
                      <span
                        class="_ellipse_6ae597 _ellipse__blue_6ae597"
                      />
                      stegvisning.start.list_item1
                    </p>
                  </li>
                  <li>
                    <p
                      class="navds-body-long navds-body-long--medium"
                    >
                      <span
                        class="_ellipse_6ae597 _ellipse__purple_6ae597"
                      />
                      stegvisning.start.list_item2 
                    </p>
                  </li>
                  <li>
                    <p
                      class="navds-body-long navds-body-long--medium"
                    >
                      <span
                        class="_ellipse_6ae597 _ellipse__green_6ae597"
                      />
                      stegvisning.start.list_item3 
                    </p>
                  </li>
                </ul>
              </div>
              <div
                class="navds-stack navds-hstack navds-stack-gap navds-stack-direction navds-stack-wrap"
                style="--__ac-stack-gap-xs: var(--a-spacing-4); --__ac-stack-direction-xs: row;"
              >
                <button
                  class="navds-button navds-button--primary navds-button--medium"
                  data-testid="landingside-enkel-kalkulator-button"
                >
                  <span
                    class="navds-label"
                  >
                    landingsside.button.enkel_kalkulator
                  </span>
                </button>
              </div>
              <a
                class="navds-link _link_6ae597 navds-link--action navds-link--inline-text"
                href="/pensjon/kalkulator/personopplysninger"
                target="_blank"
              >
                landingsside.link.personopplysninger
                <svg
                  aria-labelledby="title-r2"
                  fill="none"
                  focusable="false"
                  height="1.25rem"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1.25rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="title-r2"
                  >
                    application.global.external_link
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M20.532 3.471A.75.75 0 0 1 20.75 4v7.5a.75.75 0 0 1-1.5 0V5.81l-8.72 8.72a.75.75 0 1 1-1.06-1.06l8.72-8.72H12.5a.75.75 0 0 1 0-1.5H20c.206 0 .393.083.529.218l.001.002zM4.75 9A.25.25 0 0 1 5 8.75h7a.75.75 0 0 0 0-1.5H5A1.75 1.75 0 0 0 3.25 9v10c0 .966.784 1.75 1.75 1.75h10A1.75 1.75 0 0 0 16.75 19v-7a.75.75 0 0 0-1.5 0v7a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </a>
              <div>
                <p
                  class="navds-body-long navds-body-long--medium"
                >
                  landingsside.velge_mellom_detaljert_og_enkel_2
                </p>
              </div>
              <div>
                <div
                  class="navds-stack navds-hstack navds-stack-gap navds-stack-direction navds-stack-wrap"
                  style="--__ac-stack-gap-xs: var(--a-spacing-4); --__ac-stack-direction-xs: row;"
                >
                  <button
                    class="navds-button navds-button--secondary navds-button--medium"
                    data-testid="landingside-detaljert-kalkulator-button"
                  >
                    <span
                      class="navds-label"
                    >
                      landingsside.button.detaljert_kalkulator
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LandingPage > rendrer utlogget side 1`] = `
<DocumentFragment>
  <div
    class="_main_55ef1a _main__white_55ef1a"
  >
    <div
      class="_content_55ef1a _content__isFramed_55ef1a"
    >
      <div
        class="_headerGroup_55ef1a"
      >
        <representasjon-banner
          redirectto="http://localhost:3000/pensjon/kalkulator/start"
          representasjonstyper="PENSJON_FULLSTENDIG,PENSJON_SKRIV,PENSJON_PENGEMOTTAKER,PENSJON_VERGE,PENSJON_VERGE_PENGEMOTTAKER"
        />
        <div
          class="_headerGroupTitle_55ef1a _headerGroupTitle__isFramed_55ef1a"
        >
          <img
            alt=""
            class="_headerGroupTitle__logo_55ef1a"
            data-testid="framework-logo"
            src="/pensjon/kalkulator/src/assets/kalkulator.svg"
          />
          <h1
            class="navds-heading navds-heading--large"
          >
            pageframework.title
          </h1>
        </div>
      </div>
      <div
        class="_landingPage_6ae597"
      >
        <div
          class="navds-stack navds-vstack navds-stack-gap navds-stack-direction"
          style="--__ac-stack-gap-xs: var(--a-spacing-10); --__ac-stack-direction-xs: column;"
        >
          <section>
            <div
              class="navds-stack navds-vstack navds-stack-gap navds-stack-direction"
              style="--__ac-stack-gap-xs: var(--a-spacing-4); --__ac-stack-direction-xs: column;"
            >
              <h2
                class="navds-heading navds-heading--medium"
              >
                landingsside.for.deg.foedt.etter.1963
              </h2>
              <div>
                <p
                  class="navds-body-long navds-body-long--medium"
                >
                  landingsside.velge_mellom_detaljert_og_enkel
                </p>
                <ul
                  class="_list_6ae597"
                >
                  <li>
                    <p
                      class="navds-body-long navds-body-long--medium"
                    >
                      <span
                        class="_ellipse_6ae597 _ellipse__blue_6ae597"
                      />
                      stegvisning.start.list_item1
                    </p>
                  </li>
                  <li>
                    <p
                      class="navds-body-long navds-body-long--medium"
                    >
                      <span
                        class="_ellipse_6ae597 _ellipse__purple_6ae597"
                      />
                      stegvisning.start.list_item2 
                    </p>
                  </li>
                  <li>
                    <p
                      class="navds-body-long navds-body-long--medium"
                    >
                      <span
                        class="_ellipse_6ae597 _ellipse__green_6ae597"
                      />
                      stegvisning.start.list_item3 
                    </p>
                  </li>
                </ul>
              </div>
              <div
                class="navds-stack navds-hstack navds-stack-gap navds-stack-direction navds-stack-wrap"
                style="--__ac-stack-gap-xs: var(--a-spacing-4); --__ac-stack-direction-xs: row;"
              >
                <button
                  class="navds-button navds-button--primary navds-button--medium"
                  data-testid="landingside-enkel-kalkulator-button"
                >
                  <span
                    class="navds-label"
                  >
                    landingsside.button.enkel_kalkulator_utlogget
                  </span>
                </button>
              </div>
              <a
                class="navds-link _link_6ae597 navds-link--action navds-link--inline-text"
                href="/pensjon/kalkulator/personopplysninger"
                target="_blank"
              >
                landingsside.link.personopplysninger
                <svg
                  aria-labelledby="title-r2"
                  fill="none"
                  focusable="false"
                  height="1.25rem"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1.25rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="title-r2"
                  >
                    application.global.external_link
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M20.532 3.471A.75.75 0 0 1 20.75 4v7.5a.75.75 0 0 1-1.5 0V5.81l-8.72 8.72a.75.75 0 1 1-1.06-1.06l8.72-8.72H12.5a.75.75 0 0 1 0-1.5H20c.206 0 .393.083.529.218l.001.002zM4.75 9A.25.25 0 0 1 5 8.75h7a.75.75 0 0 0 0-1.5H5A1.75 1.75 0 0 0 3.25 9v10c0 .966.784 1.75 1.75 1.75h10A1.75 1.75 0 0 0 16.75 19v-7a.75.75 0 0 0-1.5 0v7a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </a>
              <div>
                <p
                  class="navds-body-long navds-body-long--medium"
                >
                  landingsside.velge_mellom_detaljert_og_enkel_2
                </p>
              </div>
              <div>
                <div
                  class="navds-stack navds-hstack navds-stack-gap navds-stack-direction navds-stack-wrap"
                  style="--__ac-stack-gap-xs: var(--a-spacing-4); --__ac-stack-direction-xs: row;"
                >
                  <button
                    class="navds-button navds-button--secondary navds-button--medium"
                    data-testid="landingside-detaljert-kalkulator-button"
                  >
                    <span
                      class="navds-label"
                    >
                      landingsside.button.detaljert_kalkulator_utlogget
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </section>
          <section>
            <div
              class="navds-stack navds-vstack navds-stack-gap navds-stack-direction"
              style="--__ac-stack-gap-xs: var(--a-spacing-2); --__ac-stack-direction-xs: column;"
            >
              <h2
                class="navds-heading navds-heading--medium"
              >
                landingsside.for.deg.foedt.foer.1963
              </h2>
              <div>
                <p
                  class="navds-body-long navds-body-long--medium"
                >
                  landingsside.du.maa.bruke.detaljert
                </p>
                <ul
                  class="_list_6ae597"
                >
                  <li>
                    <p
                      class="navds-body-long navds-body-long--medium"
                    >
                      <span
                        class="_ellipse_6ae597 _ellipse__blue_6ae597"
                      />
                      stegvisning.start.list_item1
                    </p>
                  </li>
                  <li>
                    <p
                      class="navds-body-long navds-body-long--medium"
                    >
                      <span
                        class="_ellipse_6ae597 _ellipse__purple_6ae597"
                      />
                      stegvisning.start.list_item2 
                    </p>
                  </li>
                  <li>
                    <p
                      class="navds-body-long navds-body-long--medium"
                    >
                      <span
                        class="_ellipse_6ae597 _ellipse__green_6ae597"
                      />
                      stegvisning.start.list_item3 
                    </p>
                  </li>
                </ul>
              </div>
              <div>
                <button
                  class="_button_6ae597 navds-button navds-button--secondary navds-button--medium"
                  data-testid="landingside-detaljert-kalkulator-second-button"
                >
                  <span
                    class="navds-label"
                  >
                    landingsside.button.detaljert_kalkulator_utlogget
                  </span>
                </button>
              </div>
            </div>
          </section>
          <section>
            <div
              class="navds-stack navds-vstack navds-stack-gap navds-stack-direction"
              style="--__ac-stack-gap-xs: var(--a-spacing-2); --__ac-stack-direction-xs: column;"
            >
              <h2
                class="navds-heading navds-heading--medium"
              >
                landingsside.text.uinnlogget_kalkulator
              </h2>
              <p
                class="navds-body-long navds-body-long--medium"
              >
                landingsside.body.uinnlogget_kalkulator
              </p>
              <div>
                <button
                  class="_button_6ae597 navds-button navds-button--secondary navds-button--medium"
                  data-testid="landingside-uinnlogget-kalkulator-button"
                >
                  <span
                    class="navds-label"
                  >
                    landingsside.button.uinnlogget_kalkulator
                  </span>
                </button>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`LandingPage > rendrer utlogget side 2`] = `
<DocumentFragment>
  <div
    class="_main_55ef1a _main__white_55ef1a"
  >
    <div
      class="_content_55ef1a _content__isFramed_55ef1a"
    >
      <div
        class="_headerGroup_55ef1a"
      >
        <representasjon-banner
          redirectto="http://localhost:3000/pensjon/kalkulator/start"
          representasjonstyper="PENSJON_FULLSTENDIG,PENSJON_SKRIV,PENSJON_PENGEMOTTAKER,PENSJON_VERGE,PENSJON_VERGE_PENGEMOTTAKER"
        />
        <div
          class="_headerGroupTitle_55ef1a _headerGroupTitle__isFramed_55ef1a"
        >
          <img
            alt=""
            class="_headerGroupTitle__logo_55ef1a"
            data-testid="framework-logo"
            src="/pensjon/kalkulator/src/assets/kalkulator.svg"
          />
          <h1
            class="navds-heading navds-heading--large"
          >
            pageframework.title
          </h1>
        </div>
      </div>
      <div
        class="_landingPage_6ae597"
      >
        <div
          class="navds-stack navds-vstack navds-stack-gap navds-stack-direction"
          style="--__ac-stack-gap-xs: var(--a-spacing-10); --__ac-stack-direction-xs: column;"
        >
          <section>
            <div
              class="navds-stack navds-vstack navds-stack-gap navds-stack-direction"
              style="--__ac-stack-gap-xs: var(--a-spacing-4); --__ac-stack-direction-xs: column;"
            >
              <h2
                class="navds-heading navds-heading--medium"
              >
                landingsside.for.deg.foedt.etter.1963
              </h2>
              <div>
                <p
                  class="navds-body-long navds-body-long--medium"
                >
                  landingsside.velge_mellom_detaljert_og_enkel
                </p>
                <ul
                  class="_list_6ae597"
                >
                  <li>
                    <p
                      class="navds-body-long navds-body-long--medium"
                    >
                      <span
                        class="_ellipse_6ae597 _ellipse__blue_6ae597"
                      />
                      stegvisning.start.list_item1
                    </p>
                  </li>
                  <li>
                    <p
                      class="navds-body-long navds-body-long--medium"
                    >
                      <span
                        class="_ellipse_6ae597 _ellipse__purple_6ae597"
                      />
                      stegvisning.start.list_item2 
                    </p>
                  </li>
                  <li>
                    <p
                      class="navds-body-long navds-body-long--medium"
                    >
                      <span
                        class="_ellipse_6ae597 _ellipse__green_6ae597"
                      />
                      stegvisning.start.list_item3 
                    </p>
                  </li>
                </ul>
              </div>
              <div
                class="navds-stack navds-hstack navds-stack-gap navds-stack-direction navds-stack-wrap"
                style="--__ac-stack-gap-xs: var(--a-spacing-4); --__ac-stack-direction-xs: row;"
              >
                <button
                  class="navds-button navds-button--primary navds-button--medium"
                  data-testid="landingside-enkel-kalkulator-button"
                >
                  <span
                    class="navds-label"
                  >
                    landingsside.button.enkel_kalkulator_utlogget
                  </span>
                </button>
              </div>
              <a
                class="navds-link _link_6ae597 navds-link--action navds-link--inline-text"
                href="/pensjon/kalkulator/personopplysninger"
                target="_blank"
              >
                landingsside.link.personopplysninger
                <svg
                  aria-labelledby="title-r3"
                  fill="none"
                  focusable="false"
                  height="1.25rem"
                  role="img"
                  viewBox="0 0 24 24"
                  width="1.25rem"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <title
                    id="title-r3"
                  >
                    application.global.external_link
                  </title>
                  <path
                    clip-rule="evenodd"
                    d="M20.532 3.471A.75.75 0 0 1 20.75 4v7.5a.75.75 0 0 1-1.5 0V5.81l-8.72 8.72a.75.75 0 1 1-1.06-1.06l8.72-8.72H12.5a.75.75 0 0 1 0-1.5H20c.206 0 .393.083.529.218l.001.002zM4.75 9A.25.25 0 0 1 5 8.75h7a.75.75 0 0 0 0-1.5H5A1.75 1.75 0 0 0 3.25 9v10c0 .966.784 1.75 1.75 1.75h10A1.75 1.75 0 0 0 16.75 19v-7a.75.75 0 0 0-1.5 0v7a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </a>
              <div>
                <p
                  class="navds-body-long navds-body-long--medium"
                >
                  landingsside.velge_mellom_detaljert_og_enkel_2
                </p>
              </div>
              <div>
                <div
                  class="navds-stack navds-hstack navds-stack-gap navds-stack-direction navds-stack-wrap"
                  style="--__ac-stack-gap-xs: var(--a-spacing-4); --__ac-stack-direction-xs: row;"
                >
                  <button
                    class="navds-button navds-button--secondary navds-button--medium"
                    data-testid="landingside-detaljert-kalkulator-button"
                  >
                    <span
                      class="navds-label"
                    >
                      landingsside.button.detaljert_kalkulator_utlogget
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </section>
          <section>
            <div
              class="navds-stack navds-vstack navds-stack-gap navds-stack-direction"
              style="--__ac-stack-gap-xs: var(--a-spacing-2); --__ac-stack-direction-xs: column;"
            >
              <h2
                class="navds-heading navds-heading--medium"
              >
                landingsside.for.deg.foedt.foer.1963
              </h2>
              <div>
                <p
                  class="navds-body-long navds-body-long--medium"
                >
                  landingsside.du.maa.bruke.detaljert
                </p>
                <ul
                  class="_list_6ae597"
                >
                  <li>
                    <p
                      class="navds-body-long navds-body-long--medium"
                    >
                      <span
                        class="_ellipse_6ae597 _ellipse__blue_6ae597"
                      />
                      stegvisning.start.list_item1
                    </p>
                  </li>
                  <li>
                    <p
                      class="navds-body-long navds-body-long--medium"
                    >
                      <span
                        class="_ellipse_6ae597 _ellipse__purple_6ae597"
                      />
                      stegvisning.start.list_item2 
                    </p>
                  </li>
                  <li>
                    <p
                      class="navds-body-long navds-body-long--medium"
                    >
                      <span
                        class="_ellipse_6ae597 _ellipse__green_6ae597"
                      />
                      stegvisning.start.list_item3 
                    </p>
                  </li>
                </ul>
              </div>
              <div>
                <button
                  class="_button_6ae597 navds-button navds-button--secondary navds-button--medium"
                  data-testid="landingside-detaljert-kalkulator-second-button"
                >
                  <span
                    class="navds-label"
                  >
                    landingsside.button.detaljert_kalkulator_utlogget
                  </span>
                </button>
              </div>
            </div>
          </section>
          <section>
            <div
              class="navds-stack navds-vstack navds-stack-gap navds-stack-direction"
              style="--__ac-stack-gap-xs: var(--a-spacing-2); --__ac-stack-direction-xs: column;"
            >
              <h2
                class="navds-heading navds-heading--medium"
              >
                landingsside.text.uinnlogget_kalkulator
              </h2>
              <p
                class="navds-body-long navds-body-long--medium"
              >
                landingsside.body.uinnlogget_kalkulator
              </p>
              <div>
                <button
                  class="_button_6ae597 navds-button navds-button--secondary navds-button--medium"
                  data-testid="landingside-uinnlogget-kalkulator-button"
                >
                  <span
                    class="navds-label"
                  >
                    landingsside.button.uinnlogget_kalkulator
                  </span>
                </button>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
